crates/rstest-bdd/tests/fixtures_macros/scenario_missing_step.stderr
error: No matching step definition found for 'Given an undefined step'
 --> tests/fixtures_macros/scenario_missing_step.rs:3:1
  |
3 | #[scenario(path = "../features/macros/unmatched.feature")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `scenario` (in Nightly builds, run with -Z macro-backtrace for more info)
